[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cytonic"
authors = [{name = "Niklas Rosenstein", email = "rosensteinniklas@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
  "databind.json ~=1.3,>=1.3.2",
  "nr.util ~=0.2,>=0.2.1",
  "pyyaml ~=5.4",
  "starlette ~=0.16",
]

[project.scripts]
cytonic-codegen-python = "cytonic.codegen.python:main"

[project.optional-dependencies]
fastapi = [
  "fastapi ~=0.70.1",
]
dev = [
  "pytest ~=6.2.5",
  "mypy ~=0.930",
  "uvicorn ~=0.16.0",
  "types-pyyaml",
]

[project.urls]
Home = "https://gitea.com/_/cytonic"

[tool.isort]
indent="  "
line_length=120

[tool.flit.module]
dist_name = "cytonic"
